[package]
name = "heatmapcalc"
version = "0.1.9"  # Source of truth for version
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "heatmapcalc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25"
# pyo3 = { version = "0.22", features = ["extension-module"] }
# ndarray = "0.16.1"
# numpy = "0.22"
