[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
dynamic = ["version"]  # Read from Cargo.toml via Maturin
name = "heatmapcalc"
requires-python = ">=3.12,<3.13"  # Python 3.12 only
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
  "pytest>=8",
  "maturin>=1.7.4",
  "pip>=24.2",
  "opencv-python>=4.10.0.84",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--import-mode=importlib",
  "--ignore=.archiv",
  "--ignore=scripts",
  "--no-header",
]
pythonpath = ["."]
testpaths = ["**/test", "test", "test/*.py"]
